tests/snapshots/snapshots__tip_60x20.snap
---
source: tests/snapshots.rs
expression: "harness.screen(60, 20)"
---
 Snapshot Board   Board · All tasks

 Backlog 3 · In Progress 2 · Done 2
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

 ▌ Write the README
 ▌ Cover install, usage, keys and the file format.
 ▌ ◷ 1d ago

 ▎ Record a demo
 ▎ Commit the .tape file too.
 ▎ ◷ 3d ago

 ▎ Package release binaries
 ▎ ◷ Aug 20



 Tip  Press ? for the keys on any screen · Esc to dismiss
 BOARD   ● saved   j/k card   h/l column   v view   n/N new
