tests/snapshots/snapshots__toast_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 TUI KANBAN   Snapshot Board   [BOARD]                                                       saved
 COLUMNS           │╭──────────────────────────────────────────────────────────────────────────────╮
                    │ Backlog  3                                                                   │
 ▌ Backlog 3        │╭────────────────────────────────────────────────────────────────────────────╮│
   In Prog…2        ││Write the README                                                            ││
   Done    2        ││                                                                            ││
                    ││Cover install, usage, keys and the file format.                             ││
                    ││ Backlog  •  updated 1d                                                     ││
                    │╰────────────────────────────────────────────────────────────────────────────╯│
                    │╭────────────────────────────────────────────────────────────────────────────╮│
                    ││Record a demo                                                               ││
                    ││                                                                            ││
                    ││Commit the .tape file too.                                                  ││
                    ││ Backlog  •  updated 3d                                                     ││
                    │╰────────────────────────────────────────────────────────────────────────────╯│
                    │╭────────────────────────────────────────────────────────────────────────────╮│
                    ││Package release binaries                                                    ││
                    ││                                                                            ││
                    ││No description                                                              ││
                    ││ Backlog  •  updated 9d                                                     ││
                    │╰────────────────────────────────────────────────────────────────────────────╯│
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    ╰──────────────────────────────────────────────────────────────────────────────╯
 Tab rail  •  j/k card  •  h/l column  •  v view  •  n new  •  Enter open  •  e edit  •  H/L move
