tests/snapshots/snapshots__twelve_columns_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 TUI KANBAN   Snapshot Board   [BOARD]                                                       saved
 COLUMNS           │╭──────────────────────────────────────────────────────────────────────────────╮
                    │ Stage 1  1                                                                   │
 ▌ Stage 1 1        │╭────────────────────────────────────────────────────────────────────────────╮│
   Stage 2 1        ││Task in stage 1                                                             ││
   Stage 3 1        ││                                                                            ││
   Stage 4 1        ││No description                                                              ││
   Stage 5 1        ││ Stage 1  •  updated 1h                                                     ││
   Stage 6 1        │╰────────────────────────────────────────────────────────────────────────────╯│
   Stage 7 1        │                                                                              │
   Stage 8 1        │                                                                              │
   Stage 9 1        │                                                                              │
   Stage 101        │                                                                              │
   Stage 111        │                                                                              │
   Stage 121        │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    ╰──────────────────────────────────────────────────────────────────────────────╯
 Tab rail  •  j/k card  •  h/l column  •  v view  •  n new  •  Enter open  •  e edit  •  H/L move
