tests/snapshots/snapshots__twelve_columns_scrolled_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks
                       ‹ 3 more                                                            6 more ›
  Columns              Stage 4  1                Stage 5  1                Stage 6  1
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
   Stage 1         1
   Stage 2         1   ▎ Task in stage 4         ▎ Task in stage 5         ▌ Task in stage 6
   Stage 3         1   ▎ ◷ 1h ago                ▎ ◷ 1h ago                ▌ ◷ 1h ago
   Stage 4         1
   Stage 5         1
 ▌ Stage 6         1
   Stage 7         1
   Stage 8         1
   Stage 9         1
   Stage 10        1
   Stage 11        1
   Stage 12        1













 BOARD   ● saved   Tab rail   j/k card   h/l column   v view   n/N new   Enter open   e edit
