tests/snapshots/snapshots__which_key_space_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3                In Progress  2            Done  2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 ▌ Backlog         3
   In Progress     2   ▌ Write the README        ▎ Calmer card style       ▎ Set up CI
   Done            2   ▌ Cover install, usage…   ▎ Tiles with an accent…   ▎ fmt, clippy and test…
                       ▌ ◷ 1d ago                ▎ ◷ 12m ago               ▎ ◷ 5h ago

                       ▎ Record a demo           ▎ Command table           ▎ Snapshot tests
                       ▎ Commit the .tape fil…   ▎ Every keybinding def…   ▎ ◷ 1d ago
                       ▎ ◷ 3d ago                ▎ ◷ 1h ago

                       ▎ Package release
── Space ───────────────────────────────────────────────────────────────────────────── Esc cancel ──
  h/l         previous / next column         y       duplicate task
  j/k         next / previous card           m       move to…
  PgUp/PgDn   up / down five cards or rows   E       edit description in $EDITOR
  Home/End    first / last card              d       delete task
  1–9         lane by its number             H/L     move task left / right
  g + letter  lane by its initial            J/K     move task down / up
  Tab         focus rail / cards             z       collapse / expand lane
  v           Board / All tasks              /       search
  b           switch board                   ?       this help
  Enter       open details                   :       command palette
  n/N         new task below / above         q       quit
  a           quick add to this lane         Ctrl+C  quit (anywhere)
  e           edit task

 BOARD   ● saved   Tab rail   j/k card   h/l column   v view   n/N new   Enter open   e edit
