tests/snapshots/snapshots__which_key_space_60x20.snap
---
source: tests/snapshots.rs
expression: "harness.screen(60, 20)"
---
 Snapshot Board   Board · All tasks

 Backlog 3 · In Progress 2 · Done 2
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

── Space ───────────────────────────────────── Esc cancel ──
  h/l         previous / next…   m       move to…
  j/k         next / previous…   E       edit descriptio…
  PgUp/PgDn   up / down five …   d       delete task
  Home/End    first / last ca…   H/L     move task left …
  1–9         lane by its num…   J/K     move task down …
  g + letter  lane by its ini…   z       collapse / expa…
  v           Board / All tas…   /       search
  Enter       open details       ?       this help
  n/N         new task below …   :       command palette
  a           quick add to th…   q       quit
  e           edit task          Ctrl+C  quit (anywhere)
  y           duplicate task

 BOARD   ● saved   j/k card   h/l column   v view   n/N new
